--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
